<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name" tools:ignore="PrivateResource">Ori Conductor</string>
    <string name="appName">Ori Driver</string>
    <string name="WelcomeToOriString">¡Bienvenido a Ori!</string>
    <string name="ORITravelWithORIMsg">Viaja con ori</string>
    <string name="ORIGlobal_NextStep">Continuar</string>
    <string name="ORIGlobal_AnyErrorsTitle">Revisar los siguientes errores:</string>
    <string name="ORIGlobal_webServiceError">ORI Driver Services</string>
    <string name="ORIUnexpectedError">Lo sentimos, pero ocurrió un error inesperado.</string>
    <string name="ORIUnexpectedErrorNSendLogToServer">Lo sentimos, pero ocurrió un error inesperado. La información sobre el error ha sido enviada a nuestros servidores.</string>
    <string name="ORIGlobal_DataSecurityMsg">Tus datos se almacenan de forma segura con encriptación de 256 bits</string>
    <string name="ORIGlobal_SharedPreferences">ORI_Preferences</string>
    <string name="ORIGlobal_SharedPreferencesFailed_Title">Error al guardar preferencias</string>
    <string name="ORIGlobal_SharedPreferencesFailed_Msg">Ocurrió un error al tratar de guardar las preferencias del usuario</string>
    <string name="ORIDrawerOpen">drawer_open</string>
    <string name="ORIDrawerClose">drawer_close</string>
    <string name="ORI_NoInternetConnection_Title">Sin conexión a internet</string>
    <string name="ORI_NoInternetConnection_Msg">Detectamos que no cuenta con conexión a internet, es importante que la aplicación este conectada en todo momento para ofrecerle un excelente servicio.</string>
    <string name="ORI_DefaultValueString">Default</string>
    <string name="ORIWaitingMsg">Por favor espere…</string>
    <string name="ORISwipeDownString">Deslice hacia abajo para ver todas las opciones</string>
    <string name="ORIToCancelSwipeDown">Para cancelar deslice hacia abajo</string>
    <string name="ORIOkString">OK</string>
    <string name="ORIYesString">Sí</string>
    <string name="ORINoString">No</string>
    <string name="ORIAcceptString">Aceptar</string>
    <string name="ORIConfirmString">Confirmar</string>
    <string name="ORIUnderstoodString">Entendido</string>
    <string name="ORISendString">Enviar</string>
    <string name="ORITurnOnString">Encender</string>
    <string name="ORICancelString">Cancelar</string>
    <string name="ORICloseString">Cerrar</string>
    <string name="ORIEliminateString">Eliminar</string>
    <string name="ORIRejectString">Rechazar</string>
    <string name="ORISavingInfo">Guardando información</string>
    <string name="ORISaveString">Guardar</string>
    <string name="ORILoadingMsg">Cargando información…</string>
    <string name="ORIEmergencyString">Emergencia</string>
    <string name="ORILoadingPreferences">Estamos cargando tus preferencias…</string>
    <string name="ORINoEmergencyContacts_Title">¡No cuentas con contactos de emergencia!</string>
    <string name="ORINoEmergencyContacts_Message">En ORI cuidamos tu seguridad es por eso que te recomendamos añadir números telefónicos a tu lista de contactos de emergencia para que puedas contactar a alguien por medio de nuestro botón de Pánico.</string>
    <string name="ORIPermissionsGranted_Msg">Los permisos necesarios han sido asignados</string>
    <string name="ORIPermissionsGranted_Title">Permisos asignados</string>
    <string name="ORIGPSDisable_Title">El GPS no esta encendido</string>
    <string name="ORIGPSDisable_Msg">Encontramos que el GPS se encuentra apagado, es necesario que el GPS este encendido para que ORI pueda funcionar de manera correcta. Presione Encender para ayudarte a encenderlo.</string>
    <string name="ORIAskingPermissions_Title">Necesitamos acceder a tu ubicación</string>
    <string name="ORIAskingPermissions_Msg">Para una mejor experiencia, ORI necesita accesar a tu ubicación. Haga click en Conceder permisos y despues en Permitir.</string>
    <string name="ORIBackPressed_Title">¿Estas seguro que deseas salir de la Ori?</string>
    <string name="ORIBackPressed_Msg">Recuerda que para navegar por nuestra aplicación puedes utilizar nuestro menú y la flecha de navegación en la parte superior derecha.</string>
    <string name="ORIWhatsAppDoingLabel_SearchingForRequest">Buscando pasajeros</string>
    <string name="ORIWhatsAppDoingLabel_OfflineMode">Fuera de línea</string>
    <string name="ORINeedLocationPermissions">Es necesario otorgar a Ori el uso del GPS en todo momento</string>
    <string name="ORINoLocationPermissionsGrantedTitle">Es necesario otorgar a Ori permiso a tu ubicación</string>
    <string name="ORINoLocationPermissionsGrantedMsg">Para el correcto funcionamiento de la aplicación es necesario otorgar los permisos de ubicación necesario. En el menu de Configuración de tu celular podrás otorgar los permisos.</string>
    <string name="ORINoServiceAvailableInThisCityTitle">Ciudad no disponible para servicio</string>
    <string name="ORINoServiceAvailableInThisCityMsg">Lo sentimos, pero la ciudad seleccionada no cuenta con nuestros servicios.</string>
    <string name="ORIReqStatus_Waiting">W</string>
    <string name="ORIReqStatus_OnCourse">O</string>
    <string name="ORIReqStatus_Attended">A</string>
    <string name="ORIReqStatus_Ended">E</string>
    <string name="ORIDriverStatus_Available">A</string>
    <string name="ORIDriverStatus_Available_Desc">Disponible</string>
    <string name="ORIDriverStatus_OnCourseToPickup">P</string>
    <string name="ORIDriverStatus_OnCourseToPickup_Desc">En camino a recoger pasajero</string>
    <string name="ORIDriverStatus_Busy">B</string>
    <string name="ORIDriverStatus_Busy_Desc">En viaje</string>
    <string name="ORIDriverStatus_Offline">X</string>
    <string name="ORIDriverStatus_Offline_Desc">Fuera de linea</string>
    <string name="ORIDialog_Error_IconName">Error</string>
    <string name="ORIDialog_Success_IconName">Success</string>
    <string name="ORI_Common_SessionExpired_Title">Tu sesión ha expirado</string>
    <string name="ORI_Common_SessionExpired_Msg">Cada sesión esta programada para expirar cada 7 días desde la última vez que abres el app o cuando se inicia desde otro dispositivo, si no es tu caso, es recomendable cambiar tu contraseña inmediatamente</string>
    <string name="ORI_CancelTravelRequest">¿Estás seguro que deseas cancelar la requisición de viaje?</string>
    <string name="ORIFragment_NotificationAlert_EmailSend">¡Listo, tu correo se envió con éxito!</string>
    <string name="ORIFragment_NotificationAlert_EmailInstructions">Las instrucciones para recuperar tu contraseña</string>
    <string name="ORIFragment_NotificationAlert_ConfirmSend">Se envió un correo de confirmación al correo</string>
    <string name="ORIFragment_NotificationAlert_AddCardNow">Agregar ahora</string>
    <string name="ORIFragment_NotificationAlert_AddLater">Agregar después</string>
    <string name="ORIFragment_NotificationAlert_CardSaved">¡Tarjeta guardada con éxito!</string>
    <string name="ORIFragment_NotificationAlert_CardSavedSub">Su método de pago a sido guardado con éxito</string>
    <string name="ORIFragment_NotificationAlert_CardSavedSub2">inicie sesión para comenzar a disfrutar de nuestro servicio</string>
    <string name="XML_MapDriverEndTravel">Recuerda dar las gracias a</string>
    <string name="XML_MapDriverEndTravel_FinishTravel">Finalizar viaje</string>
    <string name="XML_MapDriverDropoff">En camino a</string>
    <string name="XML_MapDriverDropoff_With">Con</string>
    <string name="XML_MapDriverDropoff_Navigate">Navegar</string>
    <string name="XML_MapDriverRatePassenger_RatePassenger">Califica a tu pasajero</string>
    <string name="XML_MapDriverRatePassenger_RateString">Calificar</string>
    <string name="XML_MapDriverRatePassenger_RateStringDesc">Califica a tu pasajero</string>
    <string name="XML_MapDriverStartTravel_WelcomeTo">Recuerda dar la bienvenida a</string>
    <string name="XML_MapDriverStartTravel_StartString">Iniciar viaje</string>
    <string name="XML_MapDriverTripDetails_OriginPoint">Punto de partida</string>
    <string name="XML_MapDriverTripDetails_DestinyPoint">Punto de destino</string>
    <string name="XML_MapDriverTripDetails_Km">Recorrido</string>
    <string name="XML_MapDriverTripDetails_Time">Tiempo</string>
    <string name="XML_MapDriverTripDetails_Fare">Tarifa</string>
    <string name="WizardLogin_WelcomeMsg">¡Bienvenido!</string>
    <string name="WizardLogin_LogInMsg">Iniciar Sesión</string>
    <string name="WizardLogin_ForgorPasswordMsg">Olvidé mi contraseña</string>
    <string name="WizardLogin_CreateUserMsg">¡Crea una cuenta!</string>
    <string name="WizardLogin_Error_ActLockedMsg">La cuenta ha sido bloqueada por motivos de seguridad. Favor de llamar a nuestro Centro de Atención a Clientes para ayudarte a desbloquear tu cuenta.</string>
    <string name="WizardLogin_Error_ActLockedTitle">Cuenta bloqueada</string>
    <string name="WizardLogin_Error_EmptyUnityEmail">El correo electrónico no puede ser vacío</string>
    <string name="WizardLogin_Error_InvalidUnityEmail">El correo electrónico no es válido</string>
    <string name="WizardLogin_Error_EmptyUnityPassword">La contraseña no puede ser vacía</string>
    <string name="WizardLogin_Error_InvalidCredentials">El correo electrónico o la contraseña son incorrectas, recuerde que tras varios intentos su cuenta se bloqueará por motivos de seguridad</string>
    <string name="navmenu_map">Mapa</string>
    <string name="navmenu_history">Historial</string>
    <string name="navmenu_mydrivers">Mis conductores</string>
    <string name="navmenu_settings">Configuración</string>
    <string name="navmenu_logoff">Cerrar Sesión</string>
    <string name="WizardForgotPassword_Instructions">Para crear una nueva contraseña escribe tu correo electrónico y sigue las instrucciones que te enviaremos a tu correo</string>
    <string name="WizardForgotPassword_EmptyEmail">El correo electrónico no puede ser vació.</string>
    <string name="WizardForgotPassword_InvalidEmail">El correo electrónico no es válido.</string>
    <string name="WizardForgotPassword_Msg_EmailSended">El correo ha sido enviado con éxito</string>
    <string name="WizardProfilePicture_SelectPhotoMsg">Seleccionar una fotografía</string>
    <string name="WizardProfilePicture_Instructions">Agrega una foto de perfil (Esta imagen es la que verán tus pasajeros y escribe tu nombre tal cual se encuentra en tu identificación).</string>
    <string name="WizardProfilePicture_MaleGenderMsg">Hombre</string>
    <string name="WizardProfilePicture_FemaleGenderMsg">Mujer</string>
    <string name="WizardProfilePicture_NickNameEmpty">Favor de escribir un nombre público.</string>
    <string name="WizardProfilePicture_ProfilePictureEmpty">Favor de elegir una foto para su perfil.</string>
    <string name="MapDriver_MapMsg">Mapa</string>
    <string name="MapDriver_RequestMsg">Favoritos</string>
    <string name="MapDriver_HistoryMsg">Historial</string>
    <string name="MapDriver_SettingsMsg">Configuración</string>
    <string name="MapDriver_LogoffMsg">Cerrar sesión</string>
    <string name="XML_FragmentEmailLabel">Correo electrónico</string>
    <string name="XML_FragmentAvailableCard">Tarjetas Aceptadas</string>
    <string name="XML_HolderName">Nombre</string>
    <string name="XML_HolderNameDesc">Nombre como aparece en la tarjeta</string>
    <string name="XML_CardNumber">Número</string>
    <string name="XML_CardNumberDesc">Sin espacios</string>
    <string name="XML_CardExpDate">Fecha de expiración</string>
    <string name="XML_CVV">Código de seguridad</string>
    <string name="XML_CVVDesc">CVV2</string>
    <string name="XML_SlashChar">/</string>
    <string name="XML_InfoIcon">i</string>
    <string name="XML_SaveCard">Guardar tarjeta</string>
    <string name="XML_ChangePassword">Cambio contraseña</string>
</resources>