<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainCreditCard"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wizard_CreditCard">
    <android.support.v7.widget.AppCompatTextView
        android:text="@string/XML_FragmentAvailableCard"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/ORIBlack"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatImageView
        android:layout_marginTop="5dip"
        android:layout_gravity="center"
        android:src="@drawable/ic_menu_acceptedcards"
        android:layout_width="100dp"
        android:layout_height="50dp" />
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_marginStart="10dip"
        android:layout_marginEnd="10dip"
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/XML_HolderName"
                android:textColor="@color/ORIBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dip" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtCardName"
                android:hint="@string/XML_HolderNameDesc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:backgroundTint="@android:color/transparent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6C7A89"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/XML_CardNumber"
                android:textColor="@color/ORIBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dip" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txtCardNumber"
                android:hint="@string/XML_CardNumberDesc"
                android:maxLength="16"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:backgroundTint="@android:color/transparent"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6C7A89"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:layout_gravity="center_vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/XML_CardExpDate"
                    android:textColor="@color/ORIBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/AvailableMonths"
                    android:padding="15dp"
                    android:spinnerMode="dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/XML_SlashChar"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/ORIBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/AvailableYears"
                    android:padding="15dp"
                    android:spinnerMode="dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#6C7A89"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp" />
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:layout_gravity="center_vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/XML_CVV"
                    android:textColor="@color/ORIBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txtCVV"
                    android:hint="@string/XML_CVVDesc"
                    android:inputType="number"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnCVV"
                    android:text="@string/XML_InfoIcon"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/ORIElectricBlue"
                    android:background="@android:color/transparent"
                    android:layout_marginStart="5dip"
                    android:layout_width="25dip"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="30dip"
        android:layout_marginStart="45dip"
        android:layout_marginEnd="45dip">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSaveCreditCard"
            android:text="@string/XML_SaveCard"
            android:textAllCaps="false"
            android:textColor="@color/ORIWhite"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@drawable/template_bluebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="1">
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/ORIGlobal_DataSecurityMsg"
                android:textColor="@color/ORIBlack"
                android:layout_gravity="center_vertical|end"
                android:textAlignment="textEnd"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip" />
            <android.support.v7.widget.AppCompatImageView
                android:src="@drawable/ic_shield"
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>