<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Wizard_ForgotPassword">

    <!-- Wrapper -->
    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <!-- Title & View -->
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/ORITravelWithORIMsg"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:background="@color/ORIGray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <!-- Main -->
        <!-- Activity title, Controls -->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="0"
                android:text="@string/XML_ChangePassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/WizardForgotPassword_Instructions"
                android:textColor="@color/ORIBlack"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatEditText
                android:layout_weight="0"
                android:id="@+id/txtRecoverMail"
                android:hint="@string/XML_FragmentEmailLabel"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textEmailAddress"
                android:background="@drawable/template_frame_gray"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.LinearLayoutCompat>

        <!-- Footer -->
        <!-- Save Button -->
        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRecoverPasswordPressed"
                android:text="@string/ORISendString"
                android:textAllCaps="false"
                android:textColor="@color/ORIWhite"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/template_bluebutton"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

</FrameLayout>
