<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/FavPassengerPicture"
            android:src="@drawable/ic_ori_blueround300"
            android:layout_width="75dp"
            android:layout_height="75dp" />
    </android.support.v7.widget.LinearLayoutCompat>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/PassengerName"
            android:layout_weight="0"
            android:text="@string/ORI_DefaultValueString"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/PassengerDateRequest"
            android:layout_weight="0"
            android:text="@string/ORI_DefaultValueString"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/AcceptPassengerRequest"
                android:text="@string/ORIAcceptString"
                android:textAllCaps="false"
                android:background="@drawable/template_greenbutton"
                android:textColor="@color/ORIWhite"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/DeclinePassengerRequest"
                android:text="@string/ORICancelString"
                android:textAllCaps="false"
                android:background="@drawable/template_redbutton"
                android:textColor="@color/ORIWhite"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="35dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>